metering/kustomize/overlays/dev/base/generated/victoriametrics/templates/vmagent/dep-ds.yaml
---
# Source: victoriametrics/templates/vmagent/dep-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metering-victoriametrics-vmagent
  namespace: "metering"
  labels:
    app.kubernetes.io/instance: metering
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoriametrics
    app.kubernetes.io/version: 1.124.0
    helm.sh/chart: victoriametrics-0.1.31
    app.kubernetes.io/part-of: victoriametrics
    app.kubernetes.io/component: vmagent
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: metering
      app.kubernetes.io/name: victoriametrics
      app.kubernetes.io/component: vmagent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: metering
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoriametrics
        app.kubernetes.io/version: 1.124.0
        helm.sh/chart: victoriametrics-0.1.31
        app.kubernetes.io/part-of: victoriametrics
        app.kubernetes.io/component: vmagent
    spec:
      serviceAccountName: metering-victoriametrics-vmagent
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: metering
                    app.kubernetes.io/name: victoriametrics
                    app.kubernetes.io/component: vmagent
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: vmagent
          image: docker.io/bitnamilegacy/victoriametrics-vmagent:1.124.0-debian-12-r0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          args:
            - --envflag.enable
            - --envflag.prefix=VM_
            - --loggerFormat=json
            - --httpListenAddr=:8429
            - --promscrape.config=/config/scrape/scrape.yml
            - --remoteWrite.tmpDataPath=/tmpData
            - --remoteWrite.url=http://metering-victoriametrics-vminsert:8480/insert/0/prometheus
            - -promscrape.cluster.membersCount=3
            - -promscrape.cluster.memberLabel=instance
            - -promscrape.cluster.replicationFactor=1
            - -remoteWrite.maxDiskUsagePerURL=500MB
            - -remoteWrite.queues=8
            - -remoteWrite.label=monitor=vm-central
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8429
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - name: scrape-configuration
              mountPath: /config/scrape
            - name: empty-dir
              mountPath: /tmpData
              subPath: app-tmpdata-dir
      volumes:
        - name: scrape-configuration
          configMap:
            name: vmagent-scrape-config
        - name: empty-dir
          emptyDir: {}
