metering/kustomize/overlays/dev/base/generated/victoriametrics/templates/vmagent/service.yaml
---
# Source: victoriametrics/templates/vmagent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metering-victoriametrics-vmagent
  namespace: "metering"
  labels:
    app.kubernetes.io/instance: metering
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoriametrics
    app.kubernetes.io/version: 1.124.0
    helm.sh/chart: victoriametrics-0.1.31
    app.kubernetes.io/part-of: victoriametrics
    app.kubernetes.io/component: vmagent
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8429"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8429
      protocol: TCP
      nodePort: null
      targetPort: http
  selector:
    app.kubernetes.io/instance: metering
    app.kubernetes.io/name: victoriametrics
    app.kubernetes.io/component: vmagent
